base-template/v1-ingress/onewo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: demo-app
spec:
  tls:
    - hosts:
        - demo.onewo.com
      secretName: onewo.com-tls
  rules:
    # eg  www.vankeservice.com
    - host: demo.onewo.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-app
                port:
                  name: http
